fixed jumpy shit

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -242,6 +242,8 @@ body {
   padding-top: 64px !important; }
 
 .toolBar {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0);
   position: fixed;
   top: 0;
   right: 0;
@@ -253,6 +255,9 @@ body {
   -moz-box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
   box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.26);
   /* &.navUp {  top: -64px;  transition: top 0.2s ease-in-out; } &.navDown {  top: 0;  transition: top 0.2s ease-in-out; }*/ }
+  .toolBar * {
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0); }
   .toolBar .title {
     background: transparent;
     text-transform: uppercase;
